# Ghost

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml  release-guard.yml  rust.yml
apps/desktop/: SIDECAR.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/models/: README.md
apps/desktop/src-tauri/src/: db.rs  fs.rs  lib.rs  main.rs
apps/server/: .env.example  package.json  tsconfig.json
apps/server/src/: db.ts  env.ts  main.ts
apps/server/src/agent/: UnslothEngine.integration.test.ts  UnslothEngine.test.ts  UnslothEngine.ts  routes.test.ts  routes.ts  tools.test.ts  tools.ts
apps/server/src/http/: auth.ts
apps/server/src/lab/: benchmark.test.ts  benchmark.ts  jobs.test.ts  jobs.ts  probe.mts  routes.test.ts  routes.ts  studio.test.ts  studio.ts  uploads.test.ts  uploads.ts
apps/server/src/store/: tasks.test.ts  tasks.ts
apps/server/src/sync/: store.ts  tasks.ts
apps/web/: .env.example  drizzle.config.ts  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  SingleTabGuard.tsx  app.css  main.tsx  useTasks.ts
apps/web/src/agent/: tools.test.ts  tools.ts
apps/web/src/components/: AddTaskForm.tsx
apps/web/src/db/: api.test.ts  api.ts  client.ts  migrator.test.ts  migrator.ts  tauriExec.ts  testing.ts  worker.ts
apps/web/src/db/migrations/: 0000_init.sql  0001_workable_giant_man.sql  0002_outbox.sql  0003_sync_meta.sql
apps/web/src/engine/: LocalEngine.test.ts  LocalEngine.ts  RemoteEngine.test.ts  RemoteEngine.ts  index.ts  types.ts
apps/web/src/fs/: fsClient.ts  useFileTree.ts
apps/web/src/modules/agent/: AgentModule.tsx  Markdown.tsx  useAgent.ts
apps/web/src/modules/color/: ColorPickerModule.tsx
apps/web/src/modules/lab/: LabModule.tsx  datasetLibrary.test.ts  datasetLibrary.ts  datasetPreview.test.ts  datasetPreview.ts  lab.test.ts  modelLibrary.test.ts  modelLibrary.ts  scan.ts  upload.ts  useFileLibrary.ts  useLab.ts
apps/web/src/modules/tasks/: AddTaskForm.tsx  TaskItem.tsx  TasksModule.tsx  useTasks.ts
apps/web/src/modules/weather/: WeatherModule.tsx  useWeather.ts  weatherCodes.ts
apps/web/src/shell/: AppShell.tsx  FileSidebar.tsx  Logo.tsx  ModuleDock.tsx  ServerStatus.tsx  fileIcons.tsx  icons.ts  shell.css
apps/web/src/sync/: SyncClient.ts  SyncStatusLight.tsx  convergence.test.ts
apps/web/src/workspace/: AddModuleMenu.tsx  ModuleFrame.tsx  Workspace.tsx  grid.test.ts  grid.ts  registry.ts  types.ts  useLayout.ts
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  EVAL.md  SYNC.md  UNSLOTH_TIER1_PLAN.md  model_lab_plan.md
scripts/: fetch-assets.mjs  fetch-assets.sh  tool-eval.mjs  tool-eval.ts
(+3 files in other folders)
