[package]
name = "ghost-desktop"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "ghost_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Spawns the bundled llama-server sidecar (Tier-0 embedded model). See SIDECAR.md.
tauri-plugin-shell = "2"
# Native SQLite for desktop persistence (src/db.rs). `bundled` compiles SQLite
# in, so no system library is needed.
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
